test/custom/bad/typeclass_ambiguous.mle
class K 'a { k : int }
